Bug 286855 - plasmoid networkmanagement doesn't support vpnc VPNS not needing user authentication
Summary: plasmoid networkmanagement doesn't support vpnc VPNS not needing user authent...
Status: RESOLVED FIXED
Alias: None
Product: Network Management
Classification: Unmaintained
Component: general (other bugs)
Version First Reported In: 0.9
Platform: openSUSE Linux
: NOR normal
Target Milestone: ---
Assignee: Will Stephenson
URL:
Keywords:
: 295468 (view as bug list)
Depends on:
Blocks:
 
Reported: 2011-11-17 15:36 UTC by Tamás Németh
Modified: 2012-03-07 14:30 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Tamás Németh 2011-11-17 15:36:13 UTC
Version:           0.9 (using KDE 4.6.5) 
OS:                Linux

I wanted to set up a vpnc connection which doesn't need user authentication, so I configured the user password not to be needed. However, plasmoid-networkmanagement simply doesn nothing when clicking onto this connection.

Reproducible: Always

Steps to Reproduce:
Configure a cisco vpn connection which doesn't need user authentication. Try to connect using it.

Actual Results:  
Plasmoid networkmanagement does nothing.

Expected Results:  
It should connect.
Comment 1 Lamarque V. Souza 2011-11-19 21:07:05 UTC
Please attach the NM log. Usually when you click on a connection and nothing happens is because NM invalidated the connection for some reason. Looking in the log helps to figure out what reason is that.
Comment 2 Tamás Németh 2011-11-22 17:18:09 UTC
(In reply to comment #1)

Nov 22 18:16:46 netadmin NetworkManager[1585]: <info> Starting VPN service 'vpnc'...
Nov 22 18:16:46 netadmin NetworkManager[1585]: <info> VPN service 'vpnc' started (org.freedesktop.NetworkManager.vpnc), PID 32027
Nov 22 18:16:46 netadmin NetworkManager[1585]: <info> VPN service 'vpnc' appeared; activating connections
Nov 22 18:16:46 netadmin NetworkManager[1585]: <info> VPN plugin state changed: 1
Nov 22 18:16:46 netadmin NetworkManager[1585]: <info> VPN plugin state changed: 3
Nov 22 18:16:46 netadmin NetworkManager[1585]: <info> VPN connection 'KDE2' (Connect) reply received.
Nov 22 18:16:46 netadmin NetworkManager[1585]: <warn> VPN plugin failed: 1
Nov 22 18:16:46 netadmin NetworkManager[1585]: <info> VPN plugin state changed: 6
Nov 22 18:16:46 netadmin NetworkManager[1585]: <info> VPN plugin state change reason: 0
Nov 22 18:16:46 netadmin NetworkManager[1585]: <warn> error disconnecting VPN: Could not process the request because no VPN connection was active.
Nov 22 18:16:46 netadmin NetworkManager[1585]: <info> Policy set 'Auto eth0' (eth0) as default for IPv4 routing and DNS.
Nov 22 18:16:52 netadmin NetworkManager[1585]: <info> VPN service 'vpnc' disappeared
Comment 3 Lamarque V. Souza 2011-11-22 17:42:23 UTC
It looks like a problem in vpnc itself. Last time I debugged vpnc I had to recompile the networkmanager-vpnc plugin to pass the debug parameter to vpnc. That will make things complicated to debug since I do not have access to your vpn server. Anyway, I am very busy these days, I will try to look at this next weekend.

By the way, yesterday I commited a change to show vpn error message in the "Connection failed" notification. At least now you receive a feedback when a error occurs.
Comment 4 Lamarque V. Souza 2011-11-26 21:08:32 UTC
It seems vpnc refuses to activate a connection that lacks the user authentication info:

https://bugzilla.redhat.com/show_bug.cgi?id=531876

Even Kvpnc refuses to create a connection without that info.

Can I close this bug as upstream?
Comment 5 Lamarque V. Souza 2011-11-26 22:13:49 UTC
Git commit 687a98c69f54654990be41d0b8007614fbac9481 by Lamarque V. Souza.
Committed on 26/11/2011 at 23:02.
Pushed by lvsouza into branch 'master'.

Refuses to create VPNC connections without user or group info.
vpnc-0.5.3 refuses to connect without those info:

https://bugzilla.redhat.com/show_bug.cgi?id=531876

When it supports that configuration we can remove this validation check.

BUG: 286855

M  +13   -1    vpnplugins/vpnc/vpncwidget.cpp

http://commits.kde.org/networkmanagement/687a98c69f54654990be41d0b8007614fbac9481
Comment 6 Lamarque V. Souza 2011-11-26 22:13:49 UTC
Git commit 1ef1677fb9132a19c047d5b1a889213941094197 by Lamarque V. Souza.
Committed on 26/11/2011 at 23:02.
Pushed by lvsouza into branch 'nm09'.

Refuses to create VPNC connections without user or group info.
vpnc-0.5.3 refuses to connect without those info:

https://bugzilla.redhat.com/show_bug.cgi?id=531876

When it supports that configuration we can remove this validation check.

BUG: 286855
(cherry picked from commit 687a98c69f54654990be41d0b8007614fbac9481)

M  +1    -1    plasma_nm_version.h
M  +13   -1    vpnplugins/vpnc/vpncwidget.cpp

http://commits.kde.org/networkmanagement/1ef1677fb9132a19c047d5b1a889213941094197
Comment 7 Tamás Németh 2011-11-28 19:34:16 UTC
Thank you for working on this problem.
Comment 8 Lamarque V. Souza 2012-03-07 14:30:16 UTC
*** Bug 295468 has been marked as a duplicate of this bug. ***