Refuses to create VPNC connections without user or group info. vpnc-0.5.3 refuses to connect without those info:

https://bugzilla.redhat.com/show_bug.cgi?id=531876

When it supports that configuration we can remove this validation check.

BUG: 286855